--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "astro": "^5.16.0",
     "daisyui": "^5.5.5",
     "lucide-svelte": "^0.554.0",
+    "pocketbase": "^0.26.5",
     "svelte": "^5.43.13",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3"
