--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "daisyui": "^5.5.5",
     "lucide-svelte": "^0.554.0",
     "pocketbase": "^0.26.5",
+    "sharp": "^0.34.5",
     "svelte": "^5.43.13",
     "tailwindcss": "^4.1.17",
     "typescript": "^5.9.3"
