--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "build": "astro build",
     "preview": "astro preview",
     "astro": "astro",
-    "build:gen-types": "npx pocketbase-typegen --db pb/pb_data/data.db --out src/lib/pb/pocketbase-types.ts"
+    "build:gen-types": "npx pocketbase-typegen --db pb/pb_data/data.db --out src/lib/pb/pocketbase-types.ts",
+    "view:pb": "npx pocketbase-uml@latest"
   },
   "dependencies": {
     "@astrojs/node": "^9.5.1",
     "@astrojs/svelte": "^7.2.2",
+    "@fontsource/ibm-plex-mono": "^5.2.7",
+    "@fontsource/space-grotesk": "^5.2.10",
     "@fontsource/space-mono": "^5.2.9",
     "@lucide/astro": "^0.554.0",
     "@tailwindcss/vite": "^4.1.17",
