--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@astrojs/node": "^9.5.1",
     "@astrojs/svelte": "^7.2.2",
     "@fontsource/ibm-plex-mono": "^5.2.7",
+    "@fontsource/inter": "^5.2.8",
+    "@fontsource/outfit": "^5.2.8",
     "@fontsource/space-grotesk": "^5.2.10",
     "@fontsource/space-mono": "^5.2.9",
     "@lucide/astro": "^0.554.0",
