--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.16.0",
     "daisyui": "^5.5.5",
+    "lenis": "^1.3.16",
     "lucide-svelte": "^0.554.0",
     "pocketbase": "^0.26.5",
     "sharp": "^0.34.5",
