--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "view:pb": "npx pocketbase-uml@latest"
   },
   "dependencies": {
+    "@astrojs/mdx": "^4.3.13",
     "@astrojs/node": "^9.5.1",
+    "@astrojs/rss": "^4.0.14",
     "@astrojs/svelte": "^7.2.2",
     "@fontsource/ibm-plex-mono": "^5.2.7",
     "@fontsource/inter": "^5.2.8",
@@ -19,12 +21,15 @@
     "@fontsource/space-grotesk": "^5.2.10",
     "@fontsource/space-mono": "^5.2.9",
     "@lucide/astro": "^0.554.0",
+    "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.16.0",
     "daisyui": "^5.5.5",
     "lenis": "^1.3.16",
     "lucide-svelte": "^0.554.0",
     "pocketbase": "^0.26.5",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
     "sharp": "^0.34.5",
     "svelte": "^5.43.13",
     "tailwindcss": "^4.1.17",
